# mobility-app-anomalies-detector

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.astro/: config.yaml
.github/workflows/: ci-cd.yml
dags/: gerar_vendas_dag.py  upload_files_to_s3_dag.py
include/: settings.py
include/models/: sales.py
include/scripts/: gerar_vendas.py  upload_file_to_s3.py
models/: item.py  sales.py
scripts/: gerar_vendas.py
tests/: test_gerar_venda.py
