[tool.poetry]
name = "sales-anomalies"
version = "0.1.0"
description = ""
authors = ["Victor Contreras <contreras3991@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faker = "^37.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
